# ReacTango-v1

./: .gitignore  MANIFEST.in  README.md  build.py  pyproject.toml  rdframework.py  setup.py
rdframework/: __init__.py  __main__.py
rdframework/core/: __init__.py  framework.py
rdframework/generators/: __init__.py  app_generator.py  component_generator.py  django_generator.py  react_generator.py  root_generator.py
rdframework/templates/: __init__.py  base_templates.py  django_templates.py  react_templates.py  root_templates.py
rdframework/utils/: __init__.py  path_finder.py  server_manager.py
react_tango_creator/: __init__.py  cli.py
